# cidistance

./: README.md  experiment1.py  experiment2.py  pyproject.toml
results/: epsilon.txt  local.txt  original.txt
sample_data/: 0094_01.txt  0095_01.txt  0096_01.txt  0097_01.txt  0098_01.txt  0098_02.txt  0098_03.txt  0099_01.txt  0100_01.txt  0101_01.txt  0101_02.txt  0101_03.txt  0102_01.txt  0103_01.txt  0104_01.txt  0105_01.txt  0106_01.txt  0106_02.txt  0107_01.txt  0108_01.txt  0109_01.txt  0110_01.txt  0111_01.txt  0112_01.txt  0113_01.txt  0114_01.txt  0115_01.txt  0116_01.txt  0117_01.txt  0118_01.txt  0119_01.txt  0120_01.txt  0121_01.txt  0122_01.txt  0123_01.txt  0124_01.txt  0125_01.txt
src/: convert.py
src/cidistance/: gtps.py  main.py  setting.py  tps.py  util.py
